# dbt-athena-community-aws-resources

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  buildspec.j2.yml  buildspec.yml  dbt_project.yml  generate_static_html.py  pyproject.toml  system_architecture.drawio
.dbt/: profiles.yml
.github/workflows/: lint.yml
aws/cloudformation/: dbt-infrastructure.j2.yml  dbt-infrastructure.yml  dbt_infrastructure.yml
aws/lambda/aws_service_execute_result_notification/: lambda_function.py
aws/stepfunctions/: dbt_batch.j2.yml  dbt_batch.yml
script/: create_zip_files.sh  dbt-local-assume-role.sh  jinja_render.py
templates/: dbt-infrastructure.yml.j2
tickit/models/: sources.yml
tickit/models/marts/: _active_user.yml  _sales.yml  active_user.sql  sales.sql
tickit/models/staging/tickit/: _stg_tickit__category.yml  _stg_tickit__date.yml  _stg_tickit__event.yml  _stg_tickit__listing.yml  _stg_tickit__sales.yml  _stg_tickit__users.yml  _stg_tickit__venue.yml  stg_tickit__category.sql  stg_tickit__date.sql  stg_tickit__event.sql  stg_tickit__listing.sql  stg_tickit__sales.sql  stg_tickit__users.sql  stg_tickit__venue.sql
tickit/seeds/: properties.yml
